# SquareWaveApp

./: build.gradle  settings.gradle  settings.gradle.kts
app/: build.gradle  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/squarewaveapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/squarewave/: MainActivity.kt
app/src/main/java/com/example/squarewaveapp/: MainActivity.kt
app/src/main/java/com/example/squarewaveapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/squarewaveapp/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
